<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.rita_ola.simplebmi.myapplication.MainActivity">
    <item
        android:id="@+id/author"
        android:title="@string/title_activity_author"
        android:visible="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/btnSave"
        android:icon="@drawable/disk"
        android:title="@string/saveData"
        android:orderInCategory="2"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/clearSave"
        android:orderInCategory="1"
        android:title="@string/clear"
        android:visible="true"
        app:showAsAction="always"/>

</menu>