<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.rita_ola.simplebmi.Main2Activity"
        tools:showIn="@layout/activity_main2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/tvMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:text="@string/mass"
            android:textSize="@dimen/default_font_size" />

        <EditText
            android:id="@+id/etMass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvMass"
            android:layout_marginLeft="@dimen/default_left_margin"
            android:layout_marginStart="@dimen/default_left_margin"
            android:layout_toEndOf="@+id/tvMass"
            android:layout_toRightOf="@id/tvMass"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:textSize="@dimen/default_font_size"
            tools:text="67.5" />

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMass"
            android:layout_marginTop="@dimen/default_top_margin"
            android:text="@string/height"
            android:textSize="@dimen/default_font_size" />

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvHeight"
            android:layout_alignLeft="@id/etMass"
            android:layout_alignStart="@id/etMass"
            android:layout_toEndOf="@+id/tvHeight"
            android:layout_toRightOf="@id/tvHeight"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:textSize="@dimen/default_font_size"
            tools:text="1.85" />

        <Button
            android:id="@+id/btnCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etHeight"
            android:layout_marginTop="@dimen/default_top_margin"
            android:text="@string/countBmi"
            android:textSize="@dimen/default_font_size"/>

        <Switch
            android:id="@+id/btnSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="bottom"
            android:text="@string/mode_choice"
            android:textAppearance="?android:textAppearanceSmall"
            />


    </RelativeLayout>
</ScrollView>